--- a/src/ALMaster.Api/ALMaster.Api.csproj
+++ b/src/ALMaster.Api/ALMaster.Api.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ALMaster.Domain\ALMaster.Domain.csproj" />
+    <ProjectReference Include="..\ALMaster.Application\ALMaster.Application.csproj" />
+  </ItemGroup>
+
 </Project>
