Migrations, Configure Services and Seurity

--- a/src/ALMaster.Api/appsettings.Development.json
+++ b/src/ALMaster.Api/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "database": "Server=localhost;Database=almaster; Port=5433;User Id=ciq;Password=ciq"
   }
 }
