--- a/src/ALMaster.Api/ALMaster.Api.csproj
+++ b/src/ALMaster.Api/ALMaster.Api.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.6" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,5 +17,6 @@
     <ProjectReference Include="..\ALMaster.Application\ALMaster.Application.csproj" />
     <ProjectReference Include="..\ALMaster.Persistence\ALMaster.Persistence.csproj" />
   </ItemGroup>
+
 
 </Project>
